backend and frontend connection

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script
       src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js"
       crossorigin></script>
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,900&display=swap" rel="stylesheet">
     
     <script>var Alert = ReactBootstrap.Alert;</script>
 
